--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+base64 = "0.22.1"
+bs58 = "0.5.1"
 poem = "3.1.11"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
