--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -10,5 +10,7 @@ poem = "3.1.11"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 solana-client = "1.15.2"
+solana-program = "2.3.0"
 solana-sdk = "1.15.2"
+spl-token = "8.0.0"
 tokio = { version = "1.45.1", features = ["full"] }
